# google-suite

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
api/: Dockerfile  README.md  pyproject.toml
api/src/gsuite_api/: __init__.py  dependencies.py  main.py
api/src/gsuite_api/routes/: __init__.py  calendar.py  drive.py  gmail.py  health.py  sheets.py
api/tests/: test_health.py  test_main.py
cli/: README.md  pyproject.toml
cli/src/gsuite_cli/: __init__.py  auth.py  calendar.py  gmail.py  main.py  sheets.py
docs/: ARCHITECTURE.md  FODA.md  GETTING_CREDENTIALS.md  ROADMAP.md  SERVICE_ACCOUNTS.md
skill/: SKILL.md  skill.json
