[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsuite-cli"
version = "0.1.0"
description = "Google Suite Unified CLI"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Pablo Alaniz", email = "alanizpablo@gmail.com"}
]
dependencies = [
    "gsuite-core>=0.1.0",
    "gsuite-gmail>=0.1.0",
    "gsuite-calendar>=0.1.0",
    "gsuite-drive>=0.1.0",
    "gsuite-sheets>=0.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
gsuite = "gsuite_cli.main:app"

[project.urls]
Homepage = "https://github.com/PabloAlaniz/google-suite"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gsuite_cli*"]
